2003-04-21  Kevin Vandersloot <kfv101@psu.edu>

	* gtik.c: set sensitivity of add/remove buttons accordingly. Fixes bug #93463

2003-04-20  Kevin Vandersloot <kfv101@psu.edu>

	* gtik.c: remove 3 pixel veritcal padding on display. Update when prefs have changed.
	Fixes bug #90243

2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* gtik.c: (help_cb), (phelp_cb): update for screen-exec changes.

2003-03-03  Kevin Vandersloot <kfv101@psu.edu>

	* gtik.c: clean up prefs dialog and HIGify.
	
	* gtik.schemas: add comment about unused config

2003-01-23  Irene Ryan <irene.ryan@sun.com>

	* help/C/gtik2_applet2.xml: updated help for GNOME 2.2
	* help/C/gtik2_applet2-C.omf: updated for GNOME 2.2
	
2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* gtik.c (destroy_applet) Destroy the preferences dialog
	when destroying the applet.

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_GtikApplet.server.in.in: added bugzilla attributtes

2002-12-02  Christian Neumair  <chris@gnome-de.org>

	* gtik.c: Made tabs HIG compliant (removed mnemonics).

2002-11-27  Kevin Vandersloot <kfv101@psu.edu>

	* gtik.c: realize drawing widget on startup since sometimes it doesn't seem
	to be realized and the gc created at startup is therefore NULL

2002-11-27  Kevin Vandersloot <kfv101@psu.edu>

	* gtik.c: some changes from the stable branch. Make the scroll speed slower by
	default. Make the skip-forward/backword buttons scroll a shorter distance.

2002-11-27  Kevin Vandersloot <kfv101@psu.edu>

	* gtik.c: don't create a new gc on every repaint. Performance improvement
	from bug #99696

2002-09-15  Juan Salaverria <rael@vectorstar.net>

	* GNOME_GtikApplet.xml: Added a separator in the
	menu and ordered the menu items. May fix bug #89864

2002-10-29  Rajkumar Sivasamy  <rajkumar.siva@wipro.com>

	* gtik.c: Add colons to the labels in the preferences dialog.
	Fixes #81136

2002-09-19  Mark McLoughlin  <mark@skynet.ie>
