@@ -1,3 +1,9 @@
+2003-04-25  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* gtik.c:  Minor HIG changes: set default button; use sentence 
+	capitalization for various labels; add missing colons from various 
+	labels; add units after spin controls; fix widget padding.
+	
 2003-04-21  Kevin Vandersloot <kfv101@psu.edu>
 
 	* gtik.c: set sensitivity of add/remove buttons accordingly. Fixes bug #93463
